src/test/ui/reify-intrinsic.stderr
error[E0308]: cannot coerce intrinsics to function pointers
  --> $DIR/reify-intrinsic.rs:6:64
   |
LL |     let _: unsafe extern "rust-intrinsic" fn(isize) -> usize = std::mem::transmute;
   |                                                                ^^^^^^^^^^^^^^^^^^^
   |                                                                |
   |                                                                cannot coerce intrinsics to function pointers
   |                                                                help: use parentheses to call this function: `std::mem::transmute(...)`
   |
   = note: expected type `unsafe extern "rust-intrinsic" fn(isize) -> usize`
              found type `unsafe extern "rust-intrinsic" fn(_) -> _ {std::intrinsics::transmute::<_, _>}`

error[E0606]: casting `unsafe extern "rust-intrinsic" fn(_) -> _ {std::intrinsics::transmute::<_, _>}` as `unsafe extern "rust-intrinsic" fn(isize) -> usize` is invalid
  --> $DIR/reify-intrinsic.rs:11:13
   |
LL |     let _ = std::mem::transmute as unsafe extern "rust-intrinsic" fn(isize) -> usize;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0606.
For more information about an error, try `rustc --explain E0308`.
